src/objects/Cuenta__c.object
<CustomObject>
    <fields>
        <fullName>Cheques_Devueltos__c</fullName>
        <label>Cheques Devueltos</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cifin__c</fullName>
        <label>Cifin</label>
        <referenceTo>Cifin__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <label>Ciudad</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cupo_Sobregiro__c</fullName>
        <label>Cupo Sobregiro</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dias__c</fullName>
        <label>Dias</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad__c</fullName>
        <label>Entidad</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Apertura__c</fullName>
        <label>Fecha Apertura</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Corte__c</fullName>
        <label>Fecha Corte</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Permanencia__c</fullName>
        <label>Fecha Permanencia</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Cuenta__c</fullName>
        <label>Numero Cuenta</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sucursal__c</fullName>
        <label>Sucursal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Contrato__c</fullName>
        <label>Tipo Contrato</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Entidad__c</fullName>
        <label>Tipo Entidad</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titulo__c</fullName>
        <label>Titulo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>